--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -1405,33 +1405,7 @@
 
             <div class=" swiper-container swiper-1">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide portfolio__web--item">
-                        <div class="portfolio__container web">
-                            <div class="portfolio__item portfolio__item--flex-img ">
-                                <img src="assets/images/miss2mrs.png " style="width: 100%; " alt=" ">
-                            </div>
-                            <div class="portfolio__item portfolio__item--flex-text">
-
-                                <h2 class="portfolio__title web ">
-                                    Miss2Mrs
-                                </h2>
-                                <ul>
-                                    <p>WHAT WE DID</p>
-                                    <li>Responsive Website Design</li>
-                                    <li>Social Media Presence</li>
-                                    <li>Photo Gallery</li>
-                                    <li>Contact Form</li>
-                                    <li>Mobile Version</li>
-                                </ul>
-                                <a href="http://www.miss2mrs.kjkcompany.com" target="_blank" class="btn btn--link btn--primary btn--top-space  btn--hover">
-                                    Visit Website
-                                </a>
-
-                            </div>
-
-                        </div>
-
-                    </div>
+                    
                     <div class="swiper-slide portfolio__web--item">
                         <div class="portfolio__container web">
                             <div class="portfolio__item portfolio__item--flex-img ">
@@ -1600,7 +1574,33 @@
                         </div>
 
                     </div>
-                    
+                    <div class="swiper-slide portfolio__web--item">
+                        <div class="portfolio__container web">
+                            <div class="portfolio__item portfolio__item--flex-img ">
+                                <img src="assets/images/miss2mrs.png " style="width: 100%; " alt=" ">
+                            </div>
+                            <div class="portfolio__item portfolio__item--flex-text">
+
+                                <h2 class="portfolio__title web ">
+                                    Miss2Mrs
+                                </h2>
+                                <ul>
+                                    <p>WHAT WE DID</p>
+                                    <li>Responsive Website Design</li>
+                                    <li>Social Media Presence</li>
+                                    <li>Photo Gallery</li>
+                                    <li>Contact Form</li>
+                                    <li>Mobile Version</li>
+                                </ul>
+                                <a href="http://www.miss2mrs.kjkcompany.com" target="_blank" class="btn btn--link btn--primary btn--top-space  btn--hover">
+                                    Visit Website
+                                </a>
+
+                            </div>
+
+                        </div>
+
+                    </div>
                     <div class="swiper-slide portfolio__web--item">
                         <div class="portfolio__container web">
                             <div class="portfolio__item portfolio__item--flex-img ">
@@ -2572,7 +2572,7 @@
         const styledBrandText = document.querySelectorAll('.portfolio__item--flex-text p')
 
         const swiperBg = document.querySelectorAll('.portfolio__swiper--area')
-        const bgColors = ['#E83124', '#D43724', '#32B196', '#D43724', '#4DC28D', '#9B4E6C', '#333EA8', '#D8944E', '#8F45A5', '#3E7BAC', '#41ABD5', '#222D35', '#2B8309', '#8F45A5']
+        const bgColors = [ '#D43724', '#32B196', '#D43724', '#4DC28D', '#9B4E6C', '#333EA8','#E83124', '#D8944E', '#8F45A5', '#3E7BAC', '#41ABD5', '#222D35', '#2B8309', '#8F45A5']
         const brandColors = ['#970A73', '#00175C', '#1A7BA8', '#66CCFF', '#669999', '#911F0D', '#46AE14', '#131440', '#46AE14', '#30C8FA', '#F44236', '#4363DF', '#FB0201', '#6F2828', '#336666', '#003300', '#24e82a','#de7317', '#de17cf', '#0099cc', '#de1720', '#8a0880']
 
         const newColors = bgColors.concat(brandColors)
