latest update menu & portfolio

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
                         <img src="assets/images/kjk-white.png" alt="logo" class="nav-bar__logo">
                     </a>
                     <div class="nav-bar__right-content-container">
-                        <a href="portfolio.html" target="_blank" class="nav-bar__link">
+                        <a href="portfolio-product.html" target="_blank" class="nav-bar__link">
                             KJK Products
                         </a>
                         <a href="contact.html" class="nav-bar__link">
@@ -221,7 +221,7 @@
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="portfolio.html" class="mobile-nav__title">
+                                    <a href="portfolio-product.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
@@ -232,7 +232,7 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="portfolio-product.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             EduPortal
                                         </a>
                                     </div>
@@ -242,17 +242,17 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio-product.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Travels Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio-product.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Marketplace
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio-product.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Directory
                                         </a>
                                     </div>
@@ -262,23 +262,23 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio-product.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             FAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio-product.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Mind Me
                                         </a>
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header  mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="portfolio.html" class="mobile-nav__title">
+                                    <a href="portfolio-web.html" class="mobile-nav__title">
                                         Website/App Development
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
-                                    <a href="portfolio.html" class="mobile-nav__title">
+                                    <a href="portfolio-branding.html" class="mobile-nav__title">
                                         Branding &amp; Development
                                     </a>
                                 </div>
