--- a/app/portfolio-product.html
+++ b/app/portfolio-product.html
@@ -47,9 +47,7 @@
             width: 100%;
             /* height: 300px; */
         }
-        .right {
-            left: 0px !important;
-        }
+
         @media only screen and (max-width:1110px) {
             .swiper-container {
                 height: 546px;
@@ -464,9 +462,9 @@
         </div>
         <div class="header__portfolio--navs">
             <ul>
-                <li id="about" class="active"><a href="about.html"> Case Study</a></li>
-                <li id="product"><a href="how-we-work.html"> KJK Products</a></li>
-                <li id="app"><a href="team.html"> Web &amp; Mobile Apps</a></li>
+                <li id="about" ><a href="about.html"> Case Study</a></li>
+                <li id="product" class="active"><a href="how-we-work.html"> KJK Products</a></li>
+                <li id="app" ><a href="team.html"> Web &amp; Mobile Apps</a></li>
                 <li id="branding"><a href="recognition.html">Corporate Branding</a></li>
 
             </ul>
@@ -477,7 +475,7 @@
 
     <section style='position:relative'>
 
-        <div class=" portfolio-section__items-container active">
+        <div class=" portfolio-section__items-container ">
             <section class="portfolio-section">
                 <img src="assets/images/bg-spot.png" class="portfolio-section__bg-spot" alt="">
                 <img src="assets/images/portbg.png" class="portfolio-section__port-bg" alt="">
@@ -786,7 +784,7 @@
 
 
         </div>
-        <div class=" portfolio-section__items-container">
+        <div class=" portfolio-section__items-container active">
 
             <section class="portfolio-section">
                 <img src="assets/images/bg-spot.png" class="portfolio-section__bg-spot" alt="">
