--- a/app/casestudy/tworeport.html
+++ b/app/casestudy/tworeport.html
@@ -41,7 +41,7 @@ gtag('config', 'UA-159861942-1');
 
             <div class="nav-bar">
                 <div class="nav-bar__container row">
-                    <a href="index.html" class="nav-bar__logo-link">
+                    <a href="../index.html" class="nav-bar__logo-link">
                         <img src="../assets/images/kjk-white.png" alt="logo" class="nav-bar__logo">
                     </a>
                     <div class="nav-bar__right-content-container">
