updated all ids and js errors

--- a/app/portfolio-branding.html
+++ b/app/portfolio-branding.html
@@ -506,7 +506,7 @@
 
 
             </section>
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="trudata">
                 <div>
                     <div class="portfolio-section__text-content-container">
                         <div>
@@ -541,7 +541,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="afiaanyi">
                 <div class="portfolio-section-item-afiaanyi">
                     <div
                         class="portfolio-section__text-content-container portfolio-section__text-content-container--afiaanyi mid">
@@ -583,7 +583,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="tworeport">
 
                 <div class="portfolio-section-item-tworeport">
 
@@ -741,7 +741,7 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="mom-foundation">
 
                 <div class="portfolio-section-item-mom">
 
@@ -816,7 +816,7 @@
 
             </section>
 
-            <div class="portfolio-section-item fave">
+            <div class="portfolio-section-item fave" id="fave">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/fave-pro.png" class="portfolio-section__img-markup" alt="">
@@ -845,7 +845,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item attendance">
+            <div class="portfolio-section-item attendance" id="e-attendance">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/attendance.png" class="portfolio-section__img-markup" alt="">
@@ -877,7 +877,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item cms">
+            <div class="portfolio-section-item cms" id="cms-platform">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/kjk cms.png" class="portfolio-section__img-markup" alt="">
@@ -911,7 +911,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item edu">
+            <div class="portfolio-section-item edu" id="edu-portal">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/eduportal.png" class="portfolio-section__img-markup" alt="">
@@ -943,7 +943,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-section-item pave">
+            <div class="portfolio-section-item pave" id="pave">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -979,7 +979,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item mind">
+            <div class="portfolio-section-item mind" id="mind-me">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -1021,7 +1021,7 @@
 
             </div>
 
-            <div class="portfolio-section-item travel">
+            <div class="portfolio-section-item travel" id="travels-platform">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -1058,7 +1058,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item directory">
+            <div class="portfolio-section-item directory" id="directory">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -1097,7 +1097,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item marketplace">
+            <div class="portfolio-section-item marketplace" id="marketplace">
                 <div>
                     <div
                         class="portfolio-section__image-container portfolio-section__image-container--resp portfolio-section__afiaanyi">
