--- a/app/portfolio-web.html
+++ b/app/portfolio-web.html
@@ -26,8 +26,8 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/global/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/styles/global/owl.theme.default.min.css">
+    <!-- <link rel="stylesheet" href="assets/styles/global/owl.carousel.min.css"> -->
+    <!-- <link rel="stylesheet" href="assets/styles/global/owl.theme.default.min.css"> -->
     <link rel="stylesheet" href="assets/styles/css/glide.core.min.css">
     <link rel="stylesheet" href="assets/styles/css/glide.core.css">
     <link rel="stylesheet" href="assets/styles/css/glide.theme.min.css">
@@ -36,7 +36,7 @@
     <!-- endbuild -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/@glidejs/glide"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
@@ -509,7 +509,7 @@
 
 
             </section>
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="trudata">
                 <div>
                     <div class="portfolio-section__text-content-container">
                         <div>
@@ -544,7 +544,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="afiaanyi">
                 <div class="portfolio-section-item-afiaanyi">
                     <div
                         class="portfolio-section__text-content-container portfolio-section__text-content-container--afiaanyi mid">
@@ -586,7 +586,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="tworeport">
 
                 <div class="portfolio-section-item-tworeport">
 
@@ -744,7 +744,7 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolio-section-item">
+            <div class="portfolio-section-item" id="mom-foundation">
 
                 <div class="portfolio-section-item-mom">
 
@@ -819,7 +819,7 @@
 
             </section>
 
-            <div class="portfolio-section-item fave">
+            <div class="portfolio-section-item fave" id="fave">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/fave-pro.png" class="portfolio-section__img-markup" alt="">
@@ -848,7 +848,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item attendance">
+            <div class="portfolio-section-item attendance" id="e-attendance">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/attendance.png" class="portfolio-section__img-markup" alt="">
@@ -880,7 +880,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item cms">
+            <div class="portfolio-section-item cms" id="cms-platform">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/kjk cms.png" class="portfolio-section__img-markup" alt="">
@@ -914,7 +914,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item edu">
+            <div class="portfolio-section-item edu" id="edu-platform">
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/eduportal.png" class="portfolio-section__img-markup" alt="">
@@ -946,7 +946,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-section-item pave">
+            <div class="portfolio-section-item pave" id="pave">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -982,7 +982,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item mind">
+            <div class="portfolio-section-item mind" id="mind-me">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -1024,7 +1024,7 @@
 
             </div>
 
-            <div class="portfolio-section-item travel">
+            <div class="portfolio-section-item travel" id="travels-platform">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -1061,7 +1061,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item directory">
+            <div class="portfolio-section-item directory" id="directory">
 
                 <div>
                     <div class="portfolio-section__image-container portfolio-section__image-container--resp">
@@ -1100,7 +1100,7 @@
 
                 </div>
             </div>
-            <div class="portfolio-section-item marketplace">
+            <div class="portfolio-section-item marketplace" id="mkarketplace">
                 <div>
                     <div
                         class="portfolio-section__image-container portfolio-section__image-container--resp portfolio-section__afiaanyi">
@@ -2552,7 +2552,7 @@
 
 
     </script>
-    <script src="jquery.min.js"></script>
+    <!-- <script src="jquery.min.js"></script> -->
     <script src="assets/scripts/owl.carousel.min.js"></script>
     <script>
         const Navs = document.querySelectorAll('.header__portfolio--navs ul li')
@@ -2612,7 +2612,7 @@
 
 
     </script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <!-- <script src="https://unpkg.com/swiper/js/swiper.min.js"></script> -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script>
