--- a/app/services.html
+++ b/app/services.html
@@ -624,9 +624,9 @@ gtag('config', 'UA-159861942-1');
 
 
     </section>
-    <section class="services services--last">
+    <section class="services services--last" id="consulting">
 
-        <div class="services__container row" id="consulting">
+        <div class="services__container row" >
 
             <div class="services__container__img">
                 <div class="services__img">
